# bpray

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  autogen.sh  configure.ac  configure.in  setup.sh
doc/: Makefile.am  Makefile.in  experiences  links  optimizing
src/: Makefile.am  Makefile.in  banna.c  bp_box.c  bp_box.h  bp_camera.c  bp_camera.h  bp_config.h  bp_debug.c  bp_debug.h  bp_image.c  bp_image.h  bp_ini_lexer.c  bp_ini_lexer.l  bp_ini_parser.c  bp_ini_parser.h  bp_ini_parser.y  bp_io.c  bp_io.h  bp_kd_tree.c  bp_kd_tree.h  bp_kd_tree_wald.c  bp_light.c  bp_light.h  bp_material.c  bp_material.h  bp_math.c  bp_math.h  bp_math_generic.h  bp_memory.c  bp_memory.h  bp_noise.h  bp_normal.c  bp_normal.h  bp_object.c  bp_object.h  bp_perlin_noise.c  bp_pigment.c  bp_pigment.h  bp_primitive.h  (+31 more)
tests/: Makefile.in
